Cleaned up messaging and code